syntax = "proto3";

option java_multiple_files = true;
option java_package = "name.yzhu.example.grpc";
option java_outer_classname = "HelloServiceProto";

package helloservice;

// 定义服务接口
service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

// 请求消息
message HelloRequest {
  string name = 1;
}

// 响应消息
message HelloResponse {
  string message = 1;
}